--- a/index.htm
+++ b/index.htm
@@ -15,6 +15,7 @@
 
   <!-- Custom colors -->
   <link rel="stylesheet" href="colors.css" />
+  <link rel="stylesheet" href="theme.css" />
   </head>
   <body class="bg-[var(--bg)] text-[var(--text)]">
     <div id="root"></div>
@@ -208,7 +209,6 @@
                   </div>
 
                   <div className="flex gap-2">
-                    <OutlineBtn onClick={clearCart} className="flex-1">Clear Cart</OutlineBtn>
                     <PrimaryBtn onClick={() => { setDrawerOpen(false); if (cart.length) setPage("address"); }} className="flex-1" disabled={cart.length === 0}>Checkout</PrimaryBtn>
                   </div>
                 </aside>
@@ -230,7 +230,6 @@
                       </p>
                       <div className="mt-4 sm:mt-5 flex flex-wrap gap-2 sm:gap-3">
                         <PrimaryBtn onClick={() => setPage("shop")}>Shop Now</PrimaryBtn>
-                        <OutlineBtn onClick={() => setPage("about")}>Learn More</OutlineBtn>
                       </div>
                       <div className="mt-5 sm:mt-6 flex flex-wrap items-center gap-2 sm:gap-4 text-xs sm:text-sm">
                         <span className="inline-flex items-center gap-2 bg-[var(--bg)] px-2 sm:px-3 py-1 rounded-full border">⭐ 4.8/5 by 1,200+ pet parents</span>
@@ -285,29 +284,28 @@
 
               {/* Shop */}
               {page === "shop" && (
-                <section className="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 sm:gap-6">
+                <section className="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 sm:gap-4 md:gap-6">
                   {CATALOG.map(p => (
-                    <div key={p.id} className="bg-white rounded-2xl shadow hover:shadow-lg transition p-4">
+                    <div key={p.id} onClick={(e) => { e.stopPropagation(); setActiveId(p.id); setPage("detail"); }} className="bg-white rounded-2xl shadow hover:shadow-lg transition p-4 cursor-pointer card elev-1">
                       <div className="relative">
                         <div className="rounded-xl overflow-hidden aspect-[4/3] mb-3">
-                          <img src={p.image} alt={p.name} loading="lazy" className="w-full h-full object-cover" />
+                          <img src={p.image} alt={p.name} loading="lazy" className="w-full h-full object-cover product-img" />
                         </div>
-                        <span className="absolute top-2 left-2 text-[10px] sm:text-xs bg-[var(--primary)] text-white px-2 py-1 rounded-lg">{p.badge}</span>
-                        <span className="absolute top-2 right-2 text-[10px] sm:text-xs bg-[var(--accent)] text-white px-2 py-1 rounded-lg">-{pctOff(p.price, p.compareAt)}%</span>
+                        <span className="absolute top-2 left-2 text-[10px] sm:text-xs bg-[var(--primary)] text-white px-2 py-1 rounded-lg badge badge--primary">{p.badge}</span>
+                        <span className="absolute top-2 right-2 text-[10px] sm:text-xs bg-[var(--accent)] text-white px-2 py-1 rounded-lg badge badge--sale">-{pctOff(p.price, p.compareAt)}%</span>
                       </div>
 
-                      <h3 className="font-semibold leading-tight text-base sm:text-lg">{p.name}</h3>
+                      <h3 className="font-semibold leading-tight text-base sm:text-lg clamp-1">{p.name}</h3>
                       <div className="text-sm sm:text-base text-gray-600">
-                        <span className="font-semibold">{formatINR(p.price)}</span>{" "}
-                        <span className="line-through text-gray-400">{formatINR(p.compareAt)}</span>
+                        <span className="font-semibold price-now">{formatINR(p.price)}</span>{" "}
+                        <span className="price-was">{formatINR(p.compareAt)}</span>
                       </div>
-                      <div className="text-xs text-amber-700 mt-1">Only {p.stock} left</div>
+                      <div className="text-xs stock-warning mt-1">Only {p.stock} left</div>
 
                       <div className="mt-3 flex gap-2">
-                        <PrimaryBtn onClick={() => addToCart(p.id)} className="flex-1">Add to Cart</PrimaryBtn>
-                        <OutlineBtn onClick={() => { setActiveId(p.id); setPage("detail"); }} className="px-3">View</OutlineBtn>
+                        <PrimaryBtn onClick={(e) => { e.stopPropagation(); addToCart(p.id); }} className="flex-1">Add to Cart</PrimaryBtn>
                       </div>
-                      <PrimaryBtn onClick={() => { addToCart(p.id); setPage("address"); }} className="mt-2 w-full">Buy Now</PrimaryBtn>
+                      <PrimaryBtn onClick={(e) => { e.stopPropagation(); addToCart(p.id); setPage("address"); }} className="mt-2 w-full">Buy Now</PrimaryBtn>
                     </div>
                   ))}
                 </section>
@@ -332,7 +330,6 @@
                     <div className="mt-4 flex flex-wrap gap-2 sm:gap-3">
                       <PrimaryBtn onClick={() => addToCart(activeProduct.id)}>Add to Cart</PrimaryBtn>
                       <PrimaryBtn onClick={() => { addToCart(activeProduct.id); setPage("address"); }}>Buy Now</PrimaryBtn>
-                      <OutlineBtn onClick={() => setPage("shop")}>Back</OutlineBtn>
                     </div>
 
                     <div className="mt-6 grid grid-cols-3 text-xs sm:text-sm">
@@ -381,7 +378,6 @@
                   <PrimaryBtn onClick={() => setPage("thankyou")}>Pay Now</PrimaryBtn>
                 </section>
               )}
-
               {/* Thank You */}
               {page === "thankyou" && (
                 <section className="text-center bg-white rounded-2xl shadow p-6 sm:p-8 max-w-lg w-full mx-auto">
